# show-me-the-work

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  fable-lite-cli.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex/: hooks.json
adapters/: intent_command.py
ci/: constraints.txt
core/: adapter_change_events.py  adapter_observation.py  agent_log.py  ambiguity.py  classify.py  compliance.py  contract.py  design_gate.py  design_gate_state.py  design_lint.py  destructive_guard.py  file_lock.py  gate_counters.py  intent.py  ledger.py  ledger_event_schema.py  ledger_migration.py  ledger_schema.py  ledger_storage.py  ledger_v1.py  ledger_v2.py  project_root.py  provenance.py  provenance_capture.py  provenance_delta.py  provenance_lifecycle.py  provenance_lifecycle_scope.py  provenance_lifecycle_start.py  provenance_lifecycle_types.py  provenance_manifest.py  provenance_observation.py  provenance_policy.py  provenance_progress.py  provenance_snapshot.py  provenance_store.py  provenance_turn_resume.py  provenance_types.py  quarantine.py  release_gate.py  risk_terms.py  (+11 more)
docs/: ARCHITECTURE.md
eval/: bench_attribution.py  bench_provenance.py  design_e2e.py  e2e_smoke.py  intent-corpus-report.md  intent-corpus.json  probes-design.md  provenance_bench_attribution.py  provenance_bench_attribution_receipt.py  provenance_bench_metrics.py  provenance_bench_models.py  provenance_bench_receipt.py  provenance_bench_scorecard.py  run_intent_eval.py  run_probes.py
fable_lite/: __init__.py  _entrypoint.py  brief.py  card.py  check.py  check_support.py  cli.py  design_check.py  doctor.py  goals.py  init.py  intent.py  migrate.py  quarantine.py  scorecard.py  scorecard_observations.py  versioning.py
goals/: goals.py
packs/: completion.en.md  completion.ko.md  design-review.en.md  design-review.ko.md  intent-interview.en.md  intent-interview.ko.md  investigation.en.md  investigation.ko.md  verification-grounding.en.md  verification-grounding.ko.md
research/: SYNTHESIS-2-opensource.md  SYNTHESIS.md  agy-huggingface-attempts.md  agy-prior-attempts.md  codex-fable-vs-opus.md  codex-github-attempts.md  opus-curation-derivatives.md  opus-fablize-analysis.md
scripts/: check_wheel_contents.py  sync_version.py
smtw/: brief.py  card.py  check.py  check_support.py  cli.py  design_check.py  doctor.py  goals.py  init.py  intent.py  migrate.py  quarantine.py  scorecard.py  versioning.py
(+267 files in other folders)
