[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fable-lite"
version = "2.6.0"
description = "Evidence-based AI work supervision with deterministic verification gates."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "show-me-the-work team" }]
dependencies = []

[project.scripts]
smtw = "smtw.cli:main"
fable-lite = "smtw.cli:main"

[tool.setuptools.packages.find]
include = ["adapters*", "core*", "fable_lite*", "goals*", "smtw*"]

[tool.setuptools.package-data]
core = ["release_receipts/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore:fable_lite is deprecated:DeprecationWarning"]
